css/styles.css
* {
  box-sizing: border-box;
}

body,
html {
  margin          : 0px !important;
  padding         : 0px !important;
  background-color: var(--v-white-plane);
  font-family     : "Mulish", sans-serif;
  scroll-behavior : smooth;
}

html {
  display        : flex;
  flex-direction : column;
  justify-content: flex-start;
  align-items    : center;
  height         : auto;
  width          : auto;
}

body {
  display        : flex;
  flex-direction : column;
  justify-content: flex-start;
  align-items    : center;
  width          : 100%;
  height         : 100%;

  max-width: 3080px;


  -moz-tap-highlight-color    : transparent !important;
  -ms-tap-highlight-color     : transparent !important;
  -o-tap-highlight-color      : transparent !important;
  --webkit-tap-highlight-color: transparent !important;
  outline                     : none;
}

img {
  display: flex;
  width  : 100%;
  height : fit-content;
}

/* -- Normalizing rules above-->*/
.v-splash {
  display         : flex;
  align-items     : center;
  justify-content : center;
  position        : absolute;
  top             : 0;
  left            : 0;
  height          : 100vh;
  width           : 100vw;
  z-index         : 9999;
  background-color: #f3f1ffdc;
  backdrop-filter : blur(20px);
  overflow        : hidden;
}

.v-splash .v-logo {
  border-radius: 50% !important;
}

.v-splash-min-dlplay-size {
  display         : none;
  align-items     : center;
  justify-content : center;
  position        : absolute;
  top             : 0;
  left            : 0;
  height          : 100vh;
  width           : 100vw;
  z-index         : 9999;
  background-color: #f7f3ffa6;
  backdrop-filter : blur(20px);
  overflow        : hidden;
}

.v-splash-min-dlplay-size .v-logo {
  width        : 50px !important;
  height       : 50px !important;
  border-radius: 2em !important;
}

/* style scroll bar */
::-webkit-scrollbar {
  display : flex !important;
  width   : 4px;
  height  : 100%;
}

::-webkit-scrollbar-track {
  display      : flex;
  border-radius: 10px;
}

.Veras-surface::-webkit-scrollbar-track {
  margin-top: 92px !important;
}


::-webkit-scrollbar-thumb {
  display: flex;
  background-image: linear-gradient(to top,
      rgba(97, 83, 163, 0.582),
      rgba(97, 83, 163, 0.582));
  border-radius: 10px;
  height       : calc(100% / 8) !important;
}

/* Typography */
p {
  font-size  : 0.9rem;
  font-weight: 400;
  line-height: 1.2rem;
  margin     : 0px;
  padding    : 0px;
  width      : auto;
  font-family: "poppins";
  color      : var(--v-white-plane);
}

a {
  display: flex;

  width: -moz-fit-content;
  width: fit-content !important;
}

.nav-title p {
  display    : flex;
  font-size  : 1.2rem;
  font-weight: 600;
  color      : var(--f7-theme-color);
  line-height: 1.2rem;
  margin     : 0px;
  padding    : 0px;
  width      : -moz-fit-content;
  width      : fit-content;
  font-family: "poppins";
  white-space: nowrap;
}

.nav-title p span {
  font-weight: 400;
  margin-left: 3px;
}

h1 {
  display        : flex;
  white-space    : nowrap;
  flex-direction : column;
  justify-content: center;
  align-items    : flex-start;

  font-size  : clamp(2.8rem, 3vw, 4rem);
  line-height: clamp(3.3rem, 3.9vw, 4.4rem);
  font-weight: 850;
  color      : var(--f7-theme-color-muted);
  padding    : 0px;
  margin     : 0px;
  /* border  :solid #161124 1px; */
  text-align : flex-start;
}

h2 {
  display        : flex;
  white-space    : nowrap;
  flex-direction : column;
  justify-content: flex-start;
  font-size      : clamp(1.3rem, 2vw, 1.8rem);
  line-height    : clamp(1.6rem, 2.6vw, 2.4rem);
  font-weight    : 800;
  color          : var(--f7-2ndry-theme-color-tint);
  padding        : 0px;
  margin         : 0px;
  /* border      :solid #161124 1px; */
  text-align     : flex-start;
}

h2,
p span {
  display        : flex;
  flex-direction : column;
  justify-content: flex-start;
  align-items    : flex-start;
}

h3 {
  display        : flex;
  align-items    : center;
  justify-content: center;
  height         : fit-content;
  white-space    : nowrap;
  line-height    : 100%;
  font-size      : clamp(1.4rem, 1.2vw, 4rem) !important;
  font-weight    : 900;
  color          : var(--f7-theme-color);
  padding        : 0px;
  margin         : 0px;
}

h4 {
  display        : flex;
  flex-direction : column;
  align-items    : flex-start;
  justify-content: center;
  height         : fit-content;
  width          : 100%;
  font-size      : clamp(1.2rem, 1.2vw, 2rem) !important;
  line-height    : clamp(1.6rem, 1.8vw, 2.5rem) !important;
  white-space    : nowrap;
  font-weight    : 600;
  color          : var(--f7-theme-color);
  padding        : 0px;
  margin         : 0px !important;
}

h5 {
  display        : flex;
  align-items    : center;
  justify-content: center;
  height         : fit-content;
  font-size      : 1rem;
  line-height    : 1rem;
  font-weight    : 600;
  color          : var(--v-white-plane);
  padding        : 0px;
  margin         : 0px;
}

/* navigation structure */
.navbar-wrapper {
  display        : flex;
  flex-direction : column;
  align-items    : center;
  justify-content: flex-start;
  position       : fixed;
  width          : 100%;
  max-width      : 3080px;
  min-height     : fit-content;
  max-height     : 100%;
  padding        : 6px;
  padding-bottom : 0px;
  margin         : 0px;
  z-index        : 999;

  background-image: linear-gradient(to top,
      var(--v-white-plane-clear),
      var(--v-white-plane),
      var(--v-white-plane));
}
/* ... */

